--- a/Project_MeBe/pom.xml
+++ b/Project_MeBe/pom.xml
@@ -61,8 +61,15 @@
             <artifactId>mebe</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
-    
+
 
     <build>
         <plugins>
