--- a/Project_MeBe/src/main/resources/application.properties
+++ b/Project_MeBe/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=Project_MeBe
 spring.datasource.url=jdbc:sqlserver://localhost\\LAPTOP-F98VSAGL:1433;databaseName=me_be;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=12345
+
+jwt.privateKey: PP39rVlhPwxIt0Fl40ZmcG8TdBFQrbXVsVhdF6JWoKM=
