--- a/Project_MeBe/src/main/resources/application.properties
+++ b/Project_MeBe/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Project_MeBe
-spring.datasource.url=jdbc:sqlserver://localhost\\LAPTOP-F98VSAGL:1433;databaseName=me_be;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost\\LAPTOP-F98VSAGL:1433;databaseName=me_be_test;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=12345
 
