--- a/Project_MeBe/src/main/resources/application.properties
+++ b/Project_MeBe/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=12345
 
 jwt.privateKey: PP39rVlhPwxIt0Fl40ZmcG8TdBFQrbXVsVhdF6JWoKM=
+
+spring.servlet.multipart.max-file-size=10MB
+fileUpload.rootPath=D:\\FPT_University\\Ky5\\SWP391\\SWP391_Final\\N3_NET1804_SWP\\img
